--- a/style.css
+++ b/style.css
@@ -631,31 +631,40 @@ nav .fa{
         margin-top: 20px;
     }
 
-
+    .welcome{
+        height: 60vh;
+    }
 
     .welcome .wel-text{
         color: #fff;
         position: absolute;
-        top: 500px;
-    left: 20px;
+        top: 200px;
+    left: 6px;
       width: 100%;
-     
+  
     
     }
 
     .welcome .wel-text h1{
         font-size: 25px;
+       
     }
     .welcome .wel-text p{
         font-size: 10px;
+    }.vision h2{
+        font-size: 25px;
     }
-
 
     .vis-mis-container{
         flex-direction: column;
-        width: 80%;
+        width: 100%;
+        margin-left: 55px;
    
       
+    }
+
+    .vis-mis h1{
+        font-size: 30px;
     }
     .mission{
         margin-top: 30px;
@@ -675,15 +684,19 @@ nav .fa{
         font-size: 14px;
     }
 
+    .services h1{
+        font-size: 30px;
+    }
+
     .ser-container{
         flex-direction: column;
      
        
-        height: 100vh;
+        height: 80vh;
        
     }
     .ser-container div{
-        margin-top: -70px;
+        margin-top: -50px;
     }
     .ser-container .ser-center{
         margin-bottom: 20px;
@@ -696,8 +709,10 @@ nav .fa{
 margin-left: -30px;
 margin-top: 40px;
     }
+
+    
     .ser-container i{
-       font-size: 18px;
+     
        margin-top: 10px;
     }
 
@@ -705,12 +720,30 @@ margin-top: 40px;
         margin-top: -5px;
     }
 
+    .choose h1{
+        font-size: 30px;
+      
+    }
+    .choose-container h2{
+        letter-spacing: 0;
+    }
     .choose-container{
         flex-direction: column;
+    }
+    .choose-container p{
+        font-size: 10px;
+    }
+
+    .choose-container img{
+        width: 80%;
+
     }
 
     .choose-container div{
         margin-top: 30px;
+        width: 80%;
+        padding: 10px 0;
+        letter-spacing: 0;
     }
 
     .banner{
@@ -721,20 +754,24 @@ margin-top: 40px;
         flex-direction: column;
         width: 80%;
         align-items: center;
-        margin-left: 50px;
+        margin-left: 40px;
     }
     .teams h1{
         margin-top: 40px;
+        font-size: 30px;
     }
     .team-container div{
         margin-top: 30px;
+    }
+    .clients h1{
+        font-size: 30px;
     }
     .clients-img {
         margin-top: 30px;
     }
     .clients-img img{
         display:inline-block;
-        width: 18%;
+        width: 15%;
         margin: 10px 30px;
         padding:10px 10px;
 
@@ -742,44 +779,57 @@ margin-top: 40px;
         }
         .footer{
             flex-direction: column;
-            width: 93%;
+            width: 90%;
         }
 
         .info-container img{
-            width: 70px;
-            border-radius: 20px;
+            width: 80px;
+           display: block;
             margin-top: 5px;
-            margin-bottom: -10px;
-         }
-         .fot-links ul{
-            margin-top: 130px;
-            margin-bottom: 90px;
+            margin-bottom: -18px;
          }
 
+         
+         .fot-links ul{
+            margin-top: 150px;
+            margin-bottom: 100px;
+         }
+
+         .fot-links ul li a{
+font-size: 15px;
+         }
+
+         .fot-links2 ul li a{
+            font-size: 15px;
+                     }
          .fot-links ul li{
             display: inline-block;
             margin: 10px 10px;
          }
          .fot-links2 ul{
-            margin-top: 30px;
+            margin-bottom: -30px;
          }
          .fot-links2 ul li{
             display: inline-block;
             margin: 10px 10px;
          }
          .fot-container3{
-            margin-bottom: 80px;
+            margin-bottom: 50px;
             margin-top: 10px;
          }
 
          .fot-contact i{
-            font-size: 18px;
+            font-size: 14px;
             transition: 0.5s;
             margin-left: 10px;
        
          }
          .fot-contact h4{
-            font-size: 15px;
+            font-size: 12px;
+         }
+
+         .copyright pre{
+            font-size: 14px;
          }
         
          nav .fa{
@@ -804,6 +854,7 @@ margin-top: 40px;
  /*-------------About Us---------------------*/
  .teams h1{
     margin-top: 70px;
+   
  }
 
  .company{
@@ -832,7 +883,7 @@ margin-top: 40px;
 
  @media only screen and (max-width:800px){
     .company h1{
-        font-size: 30px;
+        font-size: 25px;
        
      }
 
@@ -882,8 +933,8 @@ margin-top: 40px;
     height: 50%;
     object-fit: cover;
     margin-top: 50px;
-    border-radius: 20px;
-    margin-bottom: -100px;
+    border-radius: 0px;
+
   
   }
 
@@ -900,13 +951,13 @@ margin-top: 40px;
 
   .swiper-button-next{
     color: #FD5D5D;
-    margin-right: 90px;
+    margin-right: 70px;
     margin-top: -100px;
   }
 
   .swiper-button-prev{
     color: #FD5D5D;
-    margin-left: 90px;
+    margin-left: 70px;
     margin-top: -100px;
   }
 
